<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmsRemote</string>
    <string name="action_settings">Settings</string>
    
    <string name="settings">Settings</string>
    <string name="accept_sender">Accept Sender</string>
    <string name="accept_sender_summary">Sender\'s phone number. \neg: 10086</string>
    <string name="post_url">Post Url</string>
    <string name="post_url_summary">Web url reposted to. \neg: http://example.com/submit</string>
    <string name="regex">Repost Rules</string><string name="regex_summary">Repost only under the rule, regex supported. \nleave it blank if you wan to repost all</string><string name="enabled">Enabled</string><string name="enabled_summary">Starts service now?</string>
    
    
    

</resources>
