<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" >

    <EditTextPreference 
            android:key="accept_sender"
            android:summary="@string/accept_sender_summary"
            android:title="@string/accept_sender"
            android:inputType="phone"
            android:defaultValue="10086" android:persistent="true"/>
    <EditTextPreference 
            android:key="post_url"
            android:summary="@string/post_url_summary"
            android:title="@string/post_url"
            android:inputType="textUri" 
            android:defaultValue="http://example.com/submit" android:persistent="true"/>
    <EditTextPreference 
            android:key="regex"
            android:summary="@string/regex_summary"
            android:title="@string/regex"
            android:inputType="text|none"
            android:defaultValue="" android:persistent="true"/>
    <CheckBoxPreference
	        android:key="enabled"
	        android:dependency="accept_sender"
	        android:title="@string/enabled"
	        android:summary="@string/enabled_summary"
	        android:defaultValue="false" android:persistent="true"/>
    
</PreferenceScreen>